--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -1,21 +1,17 @@
 version: 3
 
-#extends: https://api.github.com/repos/example/pullapprove-config/contents/.pullapprove.yml
-
 pullapprove_conditions:
   - "'WIP' not in title"
   - "base.ref == 'staging'"
   - "'hotfix' not in labels"
-#  - "'*travis*' in statuses.succeeded"
 
 notifications:
   - when: pull_request.opened
 #    # only need to send this to external-contributors
 #    if: "author_association in ['FIRST_TIMER', 'FIRST_TIME_CONTRIBUTOR', 'CONTRIBUTOR']"
-#    comment: >
-#      Hey @{{ author }}, please make sure your tests pass and you have looked everything over. Then we will review.
-#
-#      Thanks for the PR!
+    comment: >
+      @{{ author }}, please make sure rubocop and the entire testsuite passes.
+
   - when: pullapprove.approved
     comment: "The review is completed. @{{ author }}, please merge this in when ready."
 
@@ -43,8 +39,6 @@ groups:
       teams: [ pt-indemnity ]
       users:
         - dollerbill
-      tech_lead:
-        - mculp
 
   issuance:
     conditions:
@@ -53,8 +47,6 @@ groups:
       teams: [ pt-indemnity ]
       users:
         - dollerbill
-      tech_lead:
-        - mculp
 
   ledger:
     conditions:
@@ -79,8 +71,6 @@ groups:
       teams: [ developers ]
       users:
         - dollerbill
-      tech_lead:
-        - mculp
 
   rails: # make sure we can add label for rails and assign based on rails group
     # Aron opens PR, require review from anyone in rails besides Aron, after approval require
@@ -91,8 +81,6 @@ groups:
     reviewers:
       teams: [ pt-indemnity ]
       users:
-        - dollerbill
-      tech_lead:
         - JibranKalia
 
   settlement:
@@ -102,10 +90,6 @@ groups:
       teams: [ pt-settlement ]
       users:
         - dollerbill
-      tech_lead:
-        - mculp
-
-
 
   dev:
     reviewers:
