--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -63,10 +63,8 @@ groups:
       required: 2
       request: 2
     reviewers:
-      teams: team-rails
-      users:
-        - mculp
-        - dollerbill
+      teams: [ team-rails ]
+      users: [ mculp, dollerbill ]
 
   other: # security, integrator/ dev experience, FA, internal tool/ backoffice
     conditions:
