--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -17,19 +17,17 @@ pullapprove_conditions:
 
 notifications:
   - when: pull_request.opened
-#    if: "author_association in ['FIRST_TIMER', 'FIRST_TIME_CONTRIBUTOR']"
-#      comment: |
-#        Hey @{{ author }}, thanks for opening your first pull request!
-#        Please make sure to read the handbook section on
-#        [contributing](https://primetrust-handbook.netlify.app/docs/#/?id=contributing-to-the-codebase)
-
     comment: |
       @{{ author }}, thanks for the PR! The review will start once
-      all tasks have been completed the proper labels have been applied.
+      all tasks have been completed and the proper labels are applied.
+      If you haven't, please make sure to read the handbook section on
+      [contributing](https://primetrust-handbook.netlify.app/docs/#/?id=contributing-to-the-codebase)
+
+
 
   - when: pullapprove.approved
-#    comment: "Test tech_lead name: @{{ groups.approved.include('*_techlead') }}"
-    comment: "The review is completed. @{{ author }}, please merge this in when ready."
+    comment: "Test tech_lead name: @{{ groups.approved.include('*_techlead') }}"
+#    comment: "The review is completed. @{{ author }}, please merge this in when ready."
 
 groups:
   compliance:
